# sudoku-solver

./: .pre-commit-config.yaml  LICENSE  README.md  input.txt  main.py  pyproject.toml  requirements.txt  sudoku.py
.github/workflows/: lint.yml
sudoku_solver/: __init__.py  __main__.py  solver.py
sudoku_solver/algorithms/: matrix_elimination.py  single_possible.py
sudoku_solver/utils/: flatten.py  get_region_numbers.py  parse_file.py  print_board.py
